--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 </div>
 
 
-  <!--
+  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/Sentches" target="_blank">Carlos Maia</a>.
   </div>
-  -->
+
 </body>
 </html>
